--- a/Đồ án 1 - Lê Đặng Yến Duyên/Đồ án 1 - Lê Đặng Yến Duyên/Đồ án 1 - Lê Đặng Yến Duyên.csproj
+++ b/Đồ án 1 - Lê Đặng Yến Duyên/Đồ án 1 - Lê Đặng Yến Duyên/Đồ án 1 - Lê Đặng Yến Duyên.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="BusinessLayer\" />
+    <Folder Include="Ultity\" />
     <Folder Include="Presentation\" />
   </ItemGroup>
 
